--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Edgecut
+            SACHIN
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -653,7 +653,7 @@
                 </button>
               </form>
               <div class="social_box">
-                <a href="">
+                <a href="https://www.facebook.com/profile.php?id=100052586105335&mibextid=ZbWKwL">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
                 <a href="">
@@ -662,7 +662,7 @@
                 <a href="">
                   <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </a>
-                <a href="">
+                <a href="https://instagram.com/__schin_16_o?igshid=OGQ5ZDc2ODk2ZA==">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
               </div>
