add laptop project

--- a/index.html
+++ b/index.html
@@ -139,11 +139,12 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                About Me
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
+              I am a skilled professional with expertise in Python, Django, backend development, and machine learning. With a strong passion for creating innovative solutions, I excel in designing and implementing robust backend systems and leveraging ML to solve complex problems, delivering impactful results in the tech industry.
+
             </p>
             <a href="">
               Read More
