--- a/index.html
+++ b/index.html
@@ -356,5 +356,13 @@
     </footer>
 
     <script src="js/script.js" type="module"></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-1TSVED5TGB');
+    </script>
   </body>
 </html>
