--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
     </footer>
 
     <script src="js/script.js" type="module"></script>
-
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1TSVED5TGB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
